# commitcrafter

./: .gitignore  Cargo.toml  Justfile  README.md
.github/workflows/: ci.yml
src/: cli.rs  config.rs  doctor.rs  error.rs  git.rs  learning.rs  lib.rs  log.rs  main.rs  prompt.rs
src/config/: discover.rs  merge.rs  mod.rs  schema.rs  show.rs  source.rs
src/git/: diff.rs  mod.rs  status.rs  wrappers.rs
src/provider/: anthropic.rs  base.rs  mod.rs  ollama.rs  openai.rs  openai_compat.rs  openrouter.rs
src/tui/: files.rs  mod.rs  preview.rs  setup.rs  spinner.rs  theme.rs
tests/: build_smoke.rs  cli_help.rs  config_load.rs  config_show.rs  git_smoke.rs
